--- a/MyLog/Client/MyLog.Client.Razor/Pages/Account/Login.cshtml
+++ b/MyLog/Client/MyLog.Client.Razor/Pages/Account/Login.cshtml
@@ -7,7 +7,8 @@
 <h2>Login</h2>
 
 <form id="loginForm" method="post" class="col-md-4 mx-auto">
-    <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />   <div class="form-group">
+    <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />
+    <div class="form-group">
         <label asp-for="Username"></label>
         <input asp-for="Username" class="form-control" autocomplete="off" />
         <span asp-validation-for="Username" class="text-danger"></span>
