--- a/MyLog/Client/MyLog.Client.Razor/Pages/Movements.cshtml
+++ b/MyLog/Client/MyLog.Client.Razor/Pages/Movements.cshtml
@@ -1,6 +1,8 @@
 ﻿@page
+@inject IConfiguration Configuration
 @model MyLog.Client.Razor.Pages.MovementsModel
 @{
+    var accessToken = Model.AccessToken;
 }
 
 <h1>Movements</h1>
@@ -36,28 +38,28 @@
 
 @section Scripts {
     <script>
-        function confirmDelete(id) {
+        async function confirmDelete(id) {
+            const apiUrl = '@Configuration["Api:Url"]';
             if (confirm("Are you sure you want to delete this item?")) {
-                fetch(`/Movements/Delete/${id}`, {
-                    method: 'POST',
-                    headers: {
-                        'RequestVerificationToken': document.querySelector('input[name="__RequestVerificationToken"]').value
-                    }
-                })
-                .then(response => {
+                try {
+                    const response = await fetch(`${apiUrl}/movements/${id}`, {
+                        method: 'DELETE',
+                        headers: {
+                            'Authorization': "Bearer @accessToken",
+                            'RequestVerificationToken': document.querySelector('input[name="__RequestVerificationToken"]').value
+                        }
+                    });
                     if (response.ok) {
                         location.reload();
                     } else {
                         alert("Failed to delete the item.");
                     }
-                })
-                .catch(error => {
+                } catch (error) {
                     console.error('Error:', error);
                     alert("Failed to delete the item.");
-                });
+                }
             }
-        }
-    </script>
+        }    </script>
 }
 
 <form method="post">
